# django-projects

./: LICENSE  README.md
device_management/: Makefile
device_management/config/: settings.py  urls.py
device_management/rest_api/: apps.py  models.py  serializers.py  views.py
django-auth/: .env.example  .gitignore  pyproject.toml
django-auth/app/: admin.py  models.py  urls.py  views.py
django-auth/app/forms/: __init__.py  user_change_form.py  user_creation_form.py
django-auth/app/migrations/: 0001_initial.py
django-auth/app/serializers/: __init__.py  custom_token_obtain_pair_serializer.py  send_password_reset_mail_serializer.py  user_change_password_serializer.py  user_password_reset_serializer.py  user_profile_serializer.py  user_registration_serializer.py
django-auth/app/views/: __init__.py  refresh_token_view.py  send_password_reset_mail_view.py  user_change_password_view.py  user_list_view.py  user_login_view.py  user_password_reset_view.py  user_profile_view.py  user_registration_view.py
django-auth/config/: settings.py  urls.py
django-custom-auth/: .env.example  Readme.md
django-custom-auth/app/: urls.py
django-custom-auth/config/: settings.py
django-graphql-graphene/: Makefile  pyproject.toml
django-graphql-graphene/core/: settings.py  urls.py
django-graphql-graphene/students/: admin.py  models.py  schema.py  urls.py
django-graphql-graphene/students/migrations/: 0001_initial.py
django-keycloak/: .env.example  README.md  pyproject.toml
django-keycloak/app/: authentication.py  urls.py  views.py
django-keycloak/config/: settings.py
django-oauth/: .env.example  .gitignore  pyproject.toml
django-oauth/a_core/: settings.py  urls.py
django-oauth/a_home/: cprocs.py  urls.py  views.py
django-oauth/a_users/: adapters.py  forms.py  urls.py  views.py
django-oauth/a_users/migrations/: 0001_initial.py
django-oauth/a_users/templates/a_users/: social_logins.html
django-oauth/templates/account/: login.html  signup.html
django-stripe/: .env.example  pyproject.toml
django-stripe/core/: settings.py  urls.py
django-stripe/payments/: admin.py  models.py  urls.py  views.py
django-stripe/payments/migrations/: 0001_initial.py
e_shop/: pyproject.toml
e_shop/accounts/: forms.py  models.py  views.py
e_shop/base/: models.py
e_shop/e_shop/: asgi.py  settings.py  urls.py  wsgi.py
e_shop/products/: models.py  urls.py  views.py
e_shop/templates/base/: base.html
image_uploader/: Makefile
image_uploader/config/: settings.py  urls.py
image_uploader/templates/: base.html
image_uploader/uploader/: admin.py  forms.py  models.py  urls.py  views.py
resume_uploader/: Makefile
resume_uploader/config/: settings.py  urls.py
resume_uploader/uploader/: admin.py  forms.py  models.py  urls.py  views.py
school/: pyproject.toml
school/app/: admin.py  (+1 more)
shoppinglyx/: .gitignore  README.md  pyproject.toml
shoppinglyx/app/: admin.py  forms.py  models.py  urls.py  views.py
shoppinglyx/app/migrations/: 0001_initial.py  0002_rename_discount_price_product_discounted_price_and_more.py  0003_alter_cart_id_alter_customer_id_alter_orderplaced_id_and_more.py
shoppinglyx/app/templates/app/: address.html  addtocart.html  base.html  changepassword.html  checkout.html  home.html  login.html  mobile.html  orders.html  password_change.html  password_change_done.html  password_reset.html  password_reset_confirm.html  password_reset_done.html  product_detail.html  productdetail.html  profile.html  registration.html
shoppinglyx/shoppinglyx/: settings.py
todo-tracker/: .gitignore  pyproject.toml
workforce_management/: .gitignore  Dockerfile  Makefile  README.md  manage.py  pyproject.toml
(+57 files in other folders)
