[tool.poetry]
name = "django-graphql-graphene"
version = "0.1.0"
description = ""
authors = ["nasif raihan <nasif.raihan78@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2.4"
graphene-django = "^3.2.3"
black = "^25.1.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
