[tool.poetry]
name = "django-oauth"
version = "0.1.0"
description = ""
authors = ["nasif raihan <nasif.raihan78@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2.4"
django-allauth = {extras = ["socialaccount"], version = "^65.10.0"}
django-browser-reload = "^1.18.0"
django-cleanup = "^9.0.0"
django-htmx = "^1.23.2"
pillow = "^11.3.0"
environs = "^14.2.0"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
