[tool.poetry]
name = "e-shop"
version = "0.1.0"
description = ""
authors = ["Nasif Raihan <nasif.raihan78@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
